--- a/App.xaml
+++ b/App.xaml
@@ -2,8 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ProyectoFinalAplicada"
-             StartupUri="MainWindow.xaml" DispatcherUnhandledException="Application_DispatcherUnhandledException">
+             StartupUri="LogIn.xaml" DispatcherUnhandledException="Application_DispatcherUnhandledException">
     <Application.Resources>
-         
+        <Style x:Key="Labels" TargetType="Label">
+            <Setter Property="Width" Value="150"></Setter>
+            <Setter Property="HorizontalAlignment" Value="Left"></Setter>
+            <Setter Property="FontFamily" Value="Times New Roman"></Setter>
+            <Setter Property="FontSize" Value="14"></Setter>
+        </Style>
     </Application.Resources>
 </Application>
